// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot of canceled status 1`] = `
<div
  className="MuiChip-root-5 OrderCardStatusBadge-orderStatusCanceled-2"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={-1}
>
  <span
    className="MuiChip-label-24"
  >
    Canceled
  </span>
</div>
`;

exports[`basic snapshot of completed status 1`] = `
<div
  className="MuiChip-root-5 OrderCardStatusBadge-orderStatusShipped-4"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={-1}
>
  <span
    className="MuiChip-label-24"
  >
    Completed
  </span>
</div>
`;

exports[`basic snapshot of new status 1`] = `
<div
  className="MuiChip-root-5 OrderCardStatusBadge-orderStatusNew-1"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={-1}
>
  <span
    className="MuiChip-label-24"
  >
    New
  </span>
</div>
`;

exports[`basic snapshot of processing status 1`] = `
<div
  className="MuiChip-root-5 OrderCardStatusBadge-orderStatusProcessing-3"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={-1}
>
  <span
    className="MuiChip-label-24"
  >
    Processing
  </span>
</div>
`;
